small fix for spacing adjustment

--- a/apps/synapse-portal-framework/src/components/namshub/NamshubAbout.module.scss
+++ b/apps/synapse-portal-framework/src/components/namshub/NamshubAbout.module.scss
@@ -16,7 +16,7 @@
   }
 }
 
-.aboutDescription {
+.aboutTextColor {
   color: var(--synapse-gray-900);
 }
 
